ecommerce-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ecommerce
